refactor: added @data annotation for every DTO
Took 1 minute